# Social-App-Full-Stack

./: .gitignore  README.md
backend/: posts.db  pyproject.toml
backend/app/: auth.py  db.py  main.py  pyproject.toml  schemas.py  security.py  services.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/login/: page.tsx
frontend/app/posts/: page.tsx
frontend/components/: login-form.tsx  posts-layout.tsx
my-app/: package-lock.json
